fix: icons not showing without node_modules folder

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -5,8 +5,8 @@
     font-family: "Font Awesome 6 Free";
     font-style: normal;
     font-weight: 900;
-    src: url("../../node_modules/@fortawesome/fontawesome-free/webfonts/fa-solid-900.woff2") format("woff2"),
-         url("../../node_modules/@fortawesome/fontawesome-free/webfonts/fa-solid-900.woff") format("woff");
+    src: url("./../../dist/webfonts/fa-solid-900.woff2") format("woff2"),
+         url("./../../dist/webfonts/fa-solid-900.woff") format("woff");
   }
 
 
